maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: not found: value posX
  posX = getX()
  ^JediEscaper:4: error: not found: value posY
  posY = getY()
  ^