maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  posX = getX()
  posY = getY()
}